style.css
@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap");

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  min-height: 100dvh;
  background-image: url(./assets/monster-doodle-clear.png);
  font-family: "Josefin Slab", sans-serif;
}

body {
  font-size: 100%;
}

p {
  font-size: 1rem;
}

h1 {
  font-size: 1.8em;
}

nav {
  display: flex;
  justify-content: space-between;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

nav,
footer {
  font-size: 1.8rem;
  font-family: "Amatic SC";
  font-weight: bold;
  padding: 0px 40px;
  height: 6dvh;
}

main {
  flex: 1;
  padding: 0px 40px;
}

.main-index {
  display: flex;
  flex-direction: column;
}

.container-hero-text,
.container-hero-img {
  flex: 1;
}

.container-hero-text {
  display: flex;
  flex-direction: column;
  gap: 10px;
  align-items: center;
}

.container-hero-text h1,
p {
  margin: 0px;
}

.container-hero-text h1 {
  font-size: 4rem;
}

form {
  display: flex;
  align-items: center;
}

#form-email-input {
  height: 100%;
  background-color: #fafafa;
  border: solid;
  border-style: dotted;
  border-width: 3px;
  padding: 0px 4px;
  border-radius: 5px;
  font-family: "Josefin Slab";
}

.form-email button {
  height: 100%;
  font-family: "Amatic SC";
  color: white;
  border-color: #a55fdc;
  border-radius: 5px;
  background-color: #a55fdc;
  margin-left: 10px;
}

.container-hero-img {
  display: flex;
  flex-direction: column;
  justify-content: end;
}

.hero-img {
  position: relative;
}

.hero-img-doodle {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

footer {
  background-color: #fafafa;
  margin-top: auto;
  text-align: center;
}

a {
  color: inherit;
  text-decoration-thickness: 1px;
}

h1 {
  font-family: "Amatic SC";
}

table {
  border-spacing: 0px 20px;
  font-size: 1.2rem;
}

.container-banner {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #a65fdc21;
  height: 94dvh;
  padding: 0px 40px;
}

.banner-title {
  background-color: aqua;
  text-align: center;
  width: 100%;
}

.banner-title span {
  font-weight: normal;
}

.banner-quote {
  width: 100%;
  background-color: aquamarine;
  text-align: center;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-bottom: 10%;
}

.banner-quote p {
  font-style: italic;
  font-size: 1.2rem;
}

.banner-nav {
  font-family: "Amatic SC";
  font-weight: bold;
  font-size: 1.8rem;
  width: 100%;
  margin-top: auto;
  background-color: bisque;
  display: flex;
  justify-content: space-between;
}

.container-blog {
  padding: 0px 40px;
}

.img-container {
  width: 100%;
  height: 100%;
  position: relative;
}

.img-bg {
  position: absolute;
  height: 90%;
  width: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.img-bg img {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  object-fit: cover;
}

@media screen and (min-width: 768px) {
  .img-container {
    width: 30%;
  }

  .main-index {
    display: flex;
  }
}

